# controller/health_check.go
@@ -13,10 +13,9 @@ import (
 //	@ID				health-check
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{object}	response.Response	"成功返回复制结果"
-//	@Failure		400	{object}	response.Response	"请求参数错误或飞书接口调用失败"
+//	@Success		200	{object}	response.Response	"成功返回健康检查结果"
 //	@Failure		500	{object}	response.Response	"服务器内部错误"
-//	@Router			/sheet/copyapp [post]
+//	@Router			/health [get]
 func HealthCheck(c *gin.Context) (response.Response, error) {
 	resp := service.HealthCheck()
 
